[tool.poetry]
name = "pytropic"
version = "1.1.0"
description = "Train and predict string entropy based on character n-grams"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
